<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:maxWidth="480dp">

            <TextView
                style="@style/BigButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_username"
                android:textColor="@color/text_secondary" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target_min"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                style="@style/BigButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/label_password"
                android:textColor="@color/text_secondary" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target_min"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_login"
                style="@style/BigButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target_min"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/action_login"
                android:textColor="@color/white"
                android:background="@color/primary" />

            <ProgressBar
                android:id="@+id/progress_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/text_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:textColor="@color/status_error"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
